--- a/src/default/menu-tablet-fixer.yaml
+++ b/src/default/menu-tablet-fixer.yaml
@@ -28,7 +28,7 @@ form:
       type: container.tabs
       fields:
         tab_js:
-            label: Javascript
+            label: JS
             fields:
                 js.placement:
                   type: select.select
@@ -46,19 +46,30 @@ form:
                   placeholder: -10 ... 10
                   default: 0
 
+                js.option:
+                  type: select.select
+                  label: JS File Location
+                  description: Select an option for the custom JS file, instead of the default CDN location. Local = 'templates/G_TEMPLATE/custom/js', Global = 'media/gantry5/engines/nucleus/js', Custom = any relative or absolute path
+                  default: disabled
+                  options:
+                      disabled: Disabled (CDN)
+                      local: Local (Template)
+                      global: Global (Gantry)
+                      custom: Custom
+
                 js.path:
                   type: input.text
                   label: JS Path
                   description: Path to the Atom JS file either on this server (relative from template/custom) or on a different server (absolute).
                   placeholder: path/to/JS
-                  default: js/menu-tablet-fixer.js
+                  default: menu-tablet-fixer.js
 
                 js.execution:
                   type: select.select
                   label: JS Execution
                   description: The used execution method for the loaded JS.
                   placeholder: 'Select...'
-                  default: none
+                  default: both
                   options:
                       none: None
                       async: Asynchronous
