--- a/src/default/menu-tablet-fixer.yaml
+++ b/src/default/menu-tablet-fixer.yaml
@@ -69,7 +69,7 @@ form:
                   label: JS Path
                   description: Filename of the JS file or path on this server (relative from location) or on a different server (absolute).
                   placeholder: path/to/JS or filename
-                  default: menu-tablet-fixer.js
+                  default: menu-tablet-fixer.min.js
 
                 js.execution:
                   type: select.select
